--- a/apps/web-ng/src/app/features/home/components/tool-bar/tool-bar.component.html
+++ b/apps/web-ng/src/app/features/home/components/tool-bar/tool-bar.component.html
@@ -1,1 +1,8 @@
-<div>ToolBar</div>
+<ul>
+    <li>title</li>
+    <li>
+        <nx-search-box></nx-search-box>
+    </li>
+    <li>注册</li>
+    <li>登录</li>
+</ul>
