--- a/apps/web-ng/src/app/features/home/components/home.component.html
+++ b/apps/web-ng/src/app/features/home/components/home.component.html
@@ -1,3 +1,33 @@
-<nx-tool-bar></nx-tool-bar>
-<nx-navigation-bar></nx-navigation-bar>
-<nx-discussion-list></nx-discussion-list>
+<div id="app" class="App affix App--index" [ngClass]="{drawerOpen:drawerOpen,scrolled:scrolled}">
+    <div id="app-navigation" class="App-navigation">
+        <div class="Navigation ButtonGroup App-backControl">
+            <button (click)="drawerOpen=true" class="Button Button--icon Navigation-drawer hasIcon" type="button"
+                title="">
+                <i class="icon fas fa-bars Button-icon"></i>
+                <span class="Button-label"></span>
+            </button>
+        </div>
+    </div>
+
+    <div id="drawer" class="App-drawer">
+        <nx-tool-bar></nx-tool-bar>
+    </div>
+
+    <main class="App-content">
+        <div id="content">
+            <div class="IndexPage">
+                <div></div>
+                <div class="container">
+                    <div class="sideNavContainer">
+                        <nx-navigation-bar></nx-navigation-bar>
+                        <div class="IndexPage-results sideNavOffset">
+                            <nx-discussion-list></nx-discussion-list>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+</div>
+
+<div (click)="drawerOpen=false" class="drawer-backdrop fade in" *ngIf="drawerOpen"></div>
