--- a/apps/web-ng/src/app/features/home/components/search-box/search-box.component.html
+++ b/apps/web-ng/src/app/features/home/components/search-box/search-box.component.html
@@ -1,1 +1,6 @@
-<div>SearchBox</div>
+<div class="Search ">
+    <div class="Search-input">
+        <input class="FormControl" type="search" placeholder="Search Forum">
+    </div>
+    <ul class="Dropdown-menu Search-results"></ul>
+</div>
