#add complete the user authentication component

--- a/apps/web-ng/src/app/features/home/components/forgot-password/forgot-password.component.html
+++ b/apps/web-ng/src/app/features/home/components/forgot-password/forgot-password.component.html
@@ -1,1 +1,21 @@
-<div>ForgotPassword</div>
+<div class="Modal modal-dialog ForgotPasswordModal Modal--small">
+    <div class="Modal-content">
+        <div class="Modal-close App-backControl"><button class="Button Button--icon Button--link hasIcon" type="button"
+                title=""><i class="icon fas fa-times Button-icon"></i><span class="Button-label"></span></button></div>
+        <form>
+            <div class="Modal-header">
+                <h3 class="App-titleControl App-titleControl--text">Forgot Password</h3>
+            </div>
+            <div class="Modal-body">
+                <div class="Form Form--centered">
+                    <p class="helpText">Enter your email address and we will send you a link to reset your password.</p>
+                    <div class="Form-group"><input class="FormControl" name="email" type="email" placeholder="Email"
+                            bidi="function a(e){return arguments.length&amp;&amp;e!==n.SKIP&amp;&amp;(t=e,o(a)&amp;&amp;(a._changing(),a._state=&quot;active&quot;,r.forEach((function(e,n){e(s[n](t))})))),t}">
+                    </div>
+                    <div class="Form-group"><button class="Button Button--primary Button--block" type="submit"
+                            title="Recover Password"><span class="Button-label">Recover Password</span></button></div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
