--- a/apps/web-ng/src/app/features/home/components/navigation-bar/navigation-bar.component.html
+++ b/apps/web-ng/src/app/features/home/components/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="IndexPage-nav sideNav">
     <ul>
         <li class="App-primaryControl item-newDiscussion">
-            <button class="Button Button--primary IndexPage-newDiscussion hasIcon" itemclassname="App-primaryControl"
+            <button (click)="homeService.modalStatus=1" class="Button Button--primary IndexPage-newDiscussion hasIcon" itemclassname="App-primaryControl"
                 type="button" title="Start a Discussion">
                 <i class="icon fas fa-edit Button-icon"></i>
                 <span class="Button-label">Start a Discussion</span>
