--- a/apps/web-ng/src/app/features/home/components/discussion-list/discussion-list.component.html
+++ b/apps/web-ng/src/app/features/home/components/discussion-list/discussion-list.component.html
@@ -24,66 +24,6 @@
 
 <div class="DiscussionList">
     <ul class="DiscussionList-discussions">
-        <li data-id="42">
-            <div class="DiscussionListItem Slidable"><span
-                    class="Slidable-underneath Slidable-underneath--left Slidable-underneath--elastic disabled"><i
-                        class="icon fas fa-check "></i></span>
-                <div class="DiscussionListItem-content Slidable-content"><a href="/u/ybharath007"
-                        class="DiscussionListItem-author" title=""
-                        data-original-title="ybharath007 started 3 hours ago"><span class="Avatar "
-                            style="background: rgb(208, 160, 229);">Y</span></a>
-                    <ul class="DiscussionListItem-badges badges"></ul><a href="/d/42-test"
-                        class="DiscussionListItem-main">
-                        <h3 class="DiscussionListItem-title">test</h3>
-                        <ul class="DiscussionListItem-info">
-                            <li class="item-tags"><span class="TagsLabel "><span class="TagLabel  colored"
-                                        style="color: rgb(136, 136, 136); background-color: rgb(136, 136, 136);"><span
-                                            class="TagLabel-text"> General</span></span></span></li>
-                            <li class="item-terminalPost"><span> <span class="username">ybharath007</span> started
-                                    <time pubdate="" datetime="2020-12-19T12:25:35+08:00"
-                                        title="Saturday, December 19, 2020 12:25 PM" data-humantime="">3 hours
-                                        ago</time></span>
-                            </li>
-                        </ul>
-                    </a><span class="DiscussionListItem-count" title="">0</span>
-                </div>
-            </div>
-        </li>
-        <li>
-            <pre>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                1
-            </pre>
-        </li>
+        <li *ngFor="let item of data">test </li>
     </ul>
 </div>
