#fix $event.stopPropagation()

--- a/apps/web-ng/src/app/features/home/components/home.component.html
+++ b/apps/web-ng/src/app/features/home/components/home.component.html
@@ -32,7 +32,7 @@
     </div>
     <div id="modal">
         <div (click)="homeService.modalStatus=null;" class="ModalManager modal fade" [class.in]="!!homeService.modalStatus" [ngStyle]="{display: homeService.modalStatus?'block':'none'}">
-                <ng-container (click)="$event.stopPropagation()" [ngSwitch]="homeService.modalStatus">
+                <div (click)="$event.stopPropagation()" [ngSwitch]="homeService.modalStatus">
                     <ng-container *ngSwitchCase="1">
                         <nx-login-in></nx-login-in>
                     </ng-container>
@@ -42,7 +42,7 @@
                     <ng-container *ngSwitchCase="3">
                         <nx-forgot-password></nx-forgot-password>
                     </ng-container>
-                </ng-container>
+                </div>
         </div>
     </div>
     <div (click)="drawerOpen=false;" class="drawer-backdrop fade in" *ngIf="drawerOpen"></div>
